feat(#492): Xml ingest core implementation
